fixed styling on spinner and overflow scroll

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 }
 
 .sp-circle {
+  margin-top: 15%;
   height: 20vh;
   width: 20vh;
   border: 4px rgba(250, 128, 114, 0.25) solid;
@@ -363,6 +364,7 @@ ol {
   width: 100%;
   max-height: 190px;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .twitter-feed > div > * {
@@ -578,17 +580,18 @@ ol {
   }
 }
 
-@media (min-width: 1001px) and (max-width:1350px) {
+@media (min-width: 991px) and (max-width:1350px) {
   .header-text2 {
     font-size: 1.7rem;
     padding-bottom: 1rem;
   }
 }
 
-@media (min-width: 1001px) and (max-width:1075px) {
+@media (min-width: 991px) and (max-width:1075px) {
   .twitter-list {
     max-height: 167px;
     overflow-y: scroll;
+    overflow-x: hidden;
   }
 }
 
@@ -605,7 +608,7 @@ ol {
     box-shadow: 0 10px 6px -6px #777;
   }
 }
-@media (min-width: 768px) and (max-width:1001px) {
+@media (min-width: 768px) and (max-width:991px) {
   .newest-section{
     background-color: #e7e7e7;
     width: 64%;
@@ -670,6 +673,10 @@ ol {
     width: 100%;
     min-height: 350px;
     margin-bottom: 1rem;
+  }
+
+  .sp-circle {
+    margin-top: 40%;
   }
 
   body {
